# model

./: .gitignore  ChangeLog_historical_up_to_2009  Makefile.am  Makefile.special  README  configure.in
model/: ChangeLog  Makefile.am  Makefile.in  bin.cpp  bin.h  bin2D.cpp  bin2D.h  binprobe.h  characteristic.h  cowner.cpp  cowner.h  cvr3dfunc.h  cycler.cpp  cycler.h  dwellprobe.h  eigenvalues.h  integrator.h  invariant.h  jacobian.h  linesearch.h  lusolve.h  minus.h  modulator.cpp  modulator.h  negfunc.h  newtonroot.h  normfunction.h  numerictraits.h  numerictypes.h  numvector.h  numvectorprint.h  odesystem.h  parameter.h  parameters.h  parmlist.h  probe.cpp  probe.h  radpotfunction.h  random.cpp  random.h  (+15 more)
tutorial/: Makefile.am  dynplot.gp  plotme  plotme.gnu  plotresults  singlemode.cpp  ssa.gp  statplot.gp
