dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([Makefile.am])

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(MODEL,1.10)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

dnl CXXFLAGS=-stdlib=libstdc++
dnl but it appears we then have a problem with stdexcept ...

dnl optimization ?
AC_ARG_ENABLE(debug,--enable-debug - Use this to enable debugging,CXXFLAGS="-DBZ_DEBUG -g -O0 -ftemplate-depth-60")
AC_ARG_ENABLE(optimal,--enable-optimal - Use this to enable full optimalisation,CXXFLAGS="-O3 -ftemplate-depth-60 -fomit-frame-pointer -march=i686 -malign-double -funroll-loops -fexpensive-optimizations -fschedule-insns2 -ffast-math -finline-functions -fstrict-aliasing")

dnl from gcc 3.1 : use march=pentium4 for guy



AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_PROG_MAKE_SET
AC_CONFIG_FILES([Makefile Doxyfile model/Makefile tutorial/Makefile generator/Makefile])
AC_OUTPUT
