noinst_LIBRARIES = libMODEL.a

libMODEL_a_SOURCES = bin.cpp bin.h bin2D.h binprobe.h characteristic.h cowner.cpp \
cowner.h cvr3dfunc.h cycler.cpp cycler.h dwellprobe.h eigenvalues.h \
integrator.h invariant.h jacobian.h linesearch.h lusolve.h minus.h \
modulator.cpp modulator.h negfunc.h newtonroot.h normfunction.h numerictraits.h \
numerictypes.h numvector.h numvectorprint.h odesystem.h parameter.h probe.cpp \
probe.h radpotfunction.h random.cpp random.h reservoirfunction.h rootscan.h \
scalarfunction.h ssa.h switchprobe.h ticktock.cpp ticktock.h \
timeframe.cpp timeframe.h utility.h vectorfunction.h vfamputation.h vfwithbump.h bin2D.cpp \
sinmod.h sinmod.cpp

CLEANFILES = *.*~

AUTOMAKE_OPTIONS = foreign
